<resources>
    <string name="app_name">AppGasEta</string>
    <string name="txt_titulo">Gasolina x Etanol</string>
    <string name="txt_hint_edit_gasolina">R$ Gasolina</string>
    <string name="txt_hint_edit_etanol">R$ Etanol</string>
    <string name="txt_hint_edit_telefone">Telefone</string>
    <string name="txt_hint_edit_curso_desejado">Curso Desejado</string>

    <string name="txt_button_calcular">Calcular</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
    <string name="txt_resultado">RESULTADO</string>
    <string name="txt_hint_edit_telefone_contato">txt_hint_edit_telefone_contato</string>
</resources>